--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -92,13 +92,13 @@ Scenario designer :
 
         PUBLISHING :
 
-                Lors de l'envoi de la tick story, rajouter le sagaId associé
-
                 Problème de mise à jour du state local une fois la plublication effectuée avec succès
 
                 ??? Intent : c'est quoi les mandatoryStates ?
 
                 Regle d'intégrité : Pour chaque action déclarant exécuter du code métier on doit trouver une classe portant le nom du handler déclaré dans l'action => A étudier
+
+                #DONE Lors de l'envoi de la tick story, rajouter le sagaId associé
 
                 #DONE A la modification d'une answer existante, faire un update plutot qu'un post
 
