sentences export import

--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -44,6 +44,9 @@ Scenario designer :
 
                 ??? Quid des sharedIntents ?
 
+        PRODUCTION :
+
+                Sauvegarde depuis production produit des erreurs js au mouse move
 
         PUBLISHING :
 
