--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -37,13 +37,15 @@ Scenario designer :
                 Variables de scenario-conception-item.component.scss : Trouver des noms moins orientés arbre de scenario et remonter le tout au niveau supérieur. On va sans doute vouloir partager ces variables avec le module de test pour y afficher le graph
 
         CONCEPTION :
-        
+
+                Problème au niveau de la sélection d'une entité
+
                 Popup actions. Revoir l'affichage des valeurs en read only, notament pour les non renseignées
 
                 ??? Quid des sharedIntents ?
 
                 #Internationalisation des answers. Pour le moment seul la i18n d'interfaceType textChat et de locale currentLocale est définie
-                
+
                 #Popup intent revoir l'affichage pour des noms et labels longs
 
         PRODUCTION :
