resolve #1564 translator: update API to allow defaults for other locales

--- a/docs/_fr/dev/i18n.md
+++ b/docs/_fr/dev/i18n.md
@@ -4,7 +4,7 @@ title: i18n - développement
 
 # Développer un bot multilingue (i18n)
 
-La page [Bot multilingue](../user/guides/i18n) de la documentation utilisateur présente les bases de l'internationalisation
+La page [Bot multilingue](../../user/guides/i18n) de la documentation utilisateur présente les bases de l'internationalisation
 (_i18n_) pour construire des bots avec Tock : pré-requis, _Locale_, etc.
 
 Cette page vient compléter cette documentation avec des éléments propres au développement. 
@@ -34,6 +34,7 @@ Si l'internationalisation est activée, les opérations suivantes vont être eff
 2. Tock vérifie ensuite si cette clé est déjà présente en base. 
     * Si c'est le cas, il utilise le libellé présent en base pour la langue demandée afin de trouver la traduction la plus appropriée (le connecteur ou le type d'interface peuvent également être pris en compte)
     * Sinon, une clé est créée en base avec le libellé par défaut ("Arrival at {0}" dans notre exemple) utilisée pour la langue courante
+      * Si le texte passé en paramètre est un objet `I18nLabelValue` dont le champ `defaultI18n` contient une valeur pour la langue courante, celle-ci sera utilisée
   
 3. Il est ensuite possible de consulter et de modifier ce libellé dans l'interface d'administration :   
   
@@ -89,12 +90,25 @@ Si vous souhaitez cependant éviter tout risque, vous pouvez utiliser la méthod
     send(i18nKey("my_unique_key", "There are {0} files", nb)) 
 ```  
 
+### Spécification de plusieurs localisations
+
+Il est possible de définir des valeurs par défaut pour plusieurs localisations dans le code d'un bot :
+
+```kotlin
+    send(i18nKey("departure", "Departure at {0}", setOf(I18nLocalizedLabel(Locale.FRENCH, textChat, "Départ à {0}")), nb))
+```
+
+Par défaut, ces valeurs par défaut ne seront utilisées que lorsque la clé est utilisée pour la première fois. Pour écraser
+les valeurs existantes (y compris celles définies via TOCK Studio) lorsque la localisation par défaut est changée,
+mettez la valeur de configuration `tock_i18n_reset_value_on_default_change` à `true` (soit en variable d'environnement,
+soit en propriété système).
+
 ## Tester l'internationalisation
 
 Un exemple de dispositif de test est disponible dans le
-[code source du bot d'exemple](https://github.com/theopenconversationkit/tock-bot-open-data/tree/master/src/test/kotlin/ai.tock/bot/open/data/rule)
-Il est nécessaire d'étendre [l'extension de test](https://github.com/theopenconversationkit/tock-bot-open-data/blob/master/src/test/kotlin/ai.tock/bot/open/data/rule/OpenDataJUnitExtension.kt)
-pour ensuite indiquer la [correspondance des libellés](https://github.com/theopenconversationkit/tock-bot-open-data/blob/master/src/test/kotlin/ai.tock/bot/open/data/rule/TranslatorEngineMock.kt) à tester.
+[code source du bot d'exemple](https://github.com/theopenconversationkit/tock-bot-open-data/tree/master/src/test/kotlin/rule)
+Il est nécessaire d'étendre [l'extension de test](https://github.com/theopenconversationkit/tock-bot-open-data/blob/master/src/test/kotlin/rule/OpenDataJUnitExtension.kt)
+pour ensuite indiquer la [correspondance des libellés](https://github.com/theopenconversationkit/tock-bot-open-data/blob/master/src/test/kotlin/rule/TranslatorEngineMock.kt) à tester.
 
 Il ne reste plus qu'à indiquer la locale souhaitée : 
 
