--- a/docs/_fr/user/guides/i18n.md
+++ b/docs/_fr/user/guides/i18n.md
@@ -78,4 +78,4 @@ Pour le moment, pour envisager une traduction de masse, on peut par exemple :
 
 ## Développer avec l'internationalisation
 
-Le [manuel développeur Tock](../../../dev/modes) donne plus de détails sur le développement des bots multilingues.
+Le [manuel développeur Tock](../../../dev/i18n) donne plus de détails sur le développement des bots multilingues.
