fix #1658 translator: fix answer update from admin resetting defaultI18n

--- a/docs/_en/dev/i18n.md
+++ b/docs/_en/dev/i18n.md
@@ -79,7 +79,7 @@ If you need to send "do not translate" responses, use the *BotBus.sendRaw*, *Bot
 ``` 
 
 ```kotlin
-    send("There are {0} files", nb) //FORMAT A SUIVRE 
+    send("There are {0} files", nb) //SEE FORMAT BELOW
 ```  
 
 * The collision risk between two labels is small as the story's main intent is made part of the key. 
@@ -89,7 +89,7 @@ If however you want to avoid any risk, you can use the *i18nKey* method:
     send(i18nKey("my_unique_key", "There are {0} files", nb)) 
 ```  
 
-### Specifying several localizations
+### Specifying localizations programmatically
 
 Default values can be defined for several locales in a bot's code:
 
@@ -98,7 +98,7 @@ Default values can be defined for several locales in a bot's code:
 ```
 
 By default, these default values will only be used when the key is used for the first time. To overwrite
-existing values (including those defined via TOCK Studio) when the default location is changed,
+existing values (including those defined via TOCK Studio) when the `defaultI18n` set is changed,
 set the configuration value `tock_i18n_reset_value_on_default_change` to `true` (either as an environment variable,
 or as a system property).
 
