Rename I18nLabel interface to I18nLabelContract

--- a/docs/_en/dev/i18n.md
+++ b/docs/_en/dev/i18n.md
@@ -79,7 +79,7 @@ If you need to send "do not translate" responses, use the *BotBus.sendRaw*, *Bot
 ``` 
 
 ```kotlin
-    send("There are {0} files", nb) //SEE FORMAT BELOW
+    send("There are {0} files", nb) //RECOMMENDED FORMAT
 ```  
 
 * The collision risk between two labels is small as the story's main intent is made part of the key. 
